--- a/RandomColorGenerator/style.css
+++ b/RandomColorGenerator/style.css
@@ -27,4 +27,5 @@ text-align: center;
     font-size: 20px;
     text-shadow: 2px 2px 4px black;
     border: solid 2px brown;
+    border-radius: 15px;
 }
