--- a/Animation-StarTrail/style.css
+++ b/Animation-StarTrail/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    height: 100%;
+    height: 100vh;
     background-color: bisque;
 }
 span{
@@ -8,9 +8,27 @@ span{
     width: 100px;
     height: 100px;
     position: absolute;
+    pointer-events: none;
+
     background-size: cover;
     left: 50%;
     top:50%;
     transform: translate(-50%,-50%);
+    animation: animate 6s linear;
+
     
+}
+@keyframes animate{
+    0%{
+        transform: translate(-50%,-50%);
+        opacity: 1;
+        filter:hue-rotate(0);
+        margin: 2px;
+    }
+    100%{
+        transform: translate(-50%,-5000%);
+        opacity: 0;
+        margin: 2px;
+        filter: hue-rotate(800deg);
+    }
 }
