--- a/video-popup/style.css
+++ b/video-popup/style.css
@@ -54,7 +54,15 @@ margin-top: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 1;
+    transition: opacity 0.7s;
     
+}
+.active.trailer-container{
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.7s;
+
 }
 .trailer-container video{
 position: relative;
