--- a/BlurBackground-PopUp/style.css
+++ b/BlurBackground-PopUp/style.css
@@ -9,6 +9,7 @@ body{
     align-items: center;
     background: url("https://images.unsplash.com/photo-1488190211105-8b0e65b80b4e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
 background-size: cover;
+transition: filter 0.7s;
 
 }
 h1{
@@ -55,6 +56,8 @@ h1{
     height: 200px;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+    opacity: 1;
+    transition: 0.8s;
 } 
 h4{
      color: white(70, 70, 5);
@@ -99,4 +102,9 @@ font-size: 20px;
 .close-icon:hover{
     color: orangered;
     transition: 0.4s;
+}
+.active.popup-container{
+    visibility: hidden;
+    opacity: 0;
+    top: 10%;
 }
