--- a/Random Image Generator/style.css
+++ b/Random Image Generator/style.css
@@ -3,7 +3,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: brown;
+    background-color: rgb(140, 3, 3);
+}
+h1{
+    color: white;
+    font-size: large;
+    font-family: 'Times New Roman', Times, serif;
 }
 .image-container{
     text-align: center;
@@ -18,10 +23,10 @@ body{
     height: 300px;
 }
 .btn{
-    background-color: slateblue;
+    background-color: white;
     border: none;
     padding: 10px 20px;
-    color: white;
+    color: red;
     font-weight: 600;
     margin: 10px;
     border-radius: 5px;
