--- a/AutoTextEffect/style.css
+++ b/AutoTextEffect/style.css
@@ -5,6 +5,17 @@ body{
     justify-content: center;
     height: 100vh;
     align-items: center;
+    color: rgb(247, 216, 158);
     background-color: darkcyan;
     font-family: 'Ubuntu', sans-serif;
+}
+.bg-image{
+    width: 100%;
+    height: 40vh;
+    background: url("https://images.unsplash.com/photo-1488190211105-8b0e65b80b4e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+    background-size: cover;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+    opacity: 1;
+    transition: 0.8s;
 }
